test/multilocale/diten/localBlock/needMultiLocales/localBlock3.good
localBlock3.chpl:26: error: cannot access remote data in local block
